[ML] Adapt 8.19 backport of #153755 off projects metadata API